trunk/Archive2/ab/ebff93269a82ff/output
main.cpp:1:5: error: 'pid_t' does not name a type
     pid_t fork() {
     ^
